# feishu-job-radar

./: .gitignore  DEVELOPER.md  LICENSE  README.md  config.example.yaml  pyproject.toml  run_daily.bat  start.bat  start.ps1
.github/workflows/: tests.yml
docs/: CURRENT_HANDOFF.md  CURRENT_PROJECT_STATUS.md  HANDOFF_JOB_EXTRACTION_UI_2026-07-18.md  LIQUID_GLASS_UI_REDESIGN_PLAN.md  PROJECT_OPTIMIZATION_PLAN.md  SCAN_UI_POLISH_IMPLEMENTATION_PLAN.md  UI_WORKFLOW.md  architecture-refactor-plan.md  architecture-refactor-progress.md  architecture.md
docs/feishu-guide/: MAINTENANCE.md  SCREENSHOT_CHECKLIST.md  screenshot-manifest.json
docs/release-notes/: v0.2.2.md  v0.3.0.md  v0.3.1.md  v0.4.0.md
docs/superpowers/plans/: 2026-07-11-user-friendly-feishu-init.md
docs/superpowers/specs/: 2026-07-11-user-friendly-feishu-init-design.md
packaging/: feishu-job-radar.spec
scripts/: __init__.py  annotate_feishu_guide.py  build_seed.py  export_seed_source.py  refresh_seed.py  release_check.py  smoke_installed.py  ui_sandbox.py  upgrade_seed_online.py  verify_wheel.py
src/job_monitor/: __main__.py  alerts.py  audit.py  cli.py  config.py  desktop.py  desktop_entry.py  diagnostics.py  error_safety.py  exporters.py  feishu.py  feishu_records.py  launcher.py  logging_utils.py  matcher.py  migration.py  models.py  onboarding.py  paths.py  pipeline.py  run_guard.py  runtime.py  seed.py  storage.py  wondercv.py  workspace_provisioner.py  workspace_schema.py
src/job_monitor/resources/: __init__.py
src/job_monitor/services/: __init__.py  initialization.py  scanning.py  synchronization.py  web_state.py
src/job_monitor/web/: __init__.py  app.py
src/job_monitor/web/templates/: index.html
src/jobpicky/: audit.py  backup.py  cli.py  config.py  exporters.py  feishu.py  feishu_records.py  launcher.py  locations.py  logging_utils.py  matcher.py  models.py  normalizer.py  official_search.py  organizations.py  paths.py  pipeline.py  run_guard.py  runtime.py  seed.py  storage.py  taxonomy.py  wondercv.py  workspace_provisioner.py  workspace_schema.py
src/jobpicky/core/: __init__.py  bootstrap.py  daily_update.py  ingestion.py  matching.py  queries.py  recommendations.py
src/jobpicky/integrations/: __init__.py
src/jobpicky/integrations/feishu/: __init__.py  service.py
src/jobpicky/resources/: __init__.py  china_locations_v1.json  job_taxonomy_v1.json  organization_groups_v1.json
src/jobpicky/services/: initialization.py  local.py  migration.py  scanning.py  synchronization.py  web_state.py
src/jobpicky/web/: app.py
tests/: conftest.py  test_alerts.py  test_architecture_boundaries.py  test_backup.py  test_city_inference.py  test_cli.py  test_config.py  test_core_services.py  test_crawler_pagination.py  test_daily_workflow.py  test_desktop.py  test_detail_backfill.py  test_diagnostics.py  test_error_safety_paths.py  test_export_order.py  test_exporters.py  test_feishu.py  test_feishu_audit.py  test_feishu_onboarding_web.py  test_feishu_records.py  test_feishu_workspace_api.py  test_incremental_init.py  test_initialization_cli.py  test_launcher.py  test_local_application_service.py  test_matcher.py  test_migration.py  test_mvp_onboarding.py  test_normalizer.py  test_official_pipeline.py  test_official_search.py  test_onboarding.py  test_paths.py  test_pipeline.py  test_public_config.py  test_recommendation_refresh.py  test_refresh_seed.py  test_run_guard.py  test_runtime.py  test_schema_optimization.py  (+11 more)
(+5 files in other folders)
