[project]
name = "jobpicky"
version = "0.5.0"
description = "JobPicky - Your personalized job radar"
readme = "README.md"
license = "MIT"
keywords = ["job-search", "personalized-job-search", "feishu", "career", "招聘", "求职"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "fastapi>=0.115,<0.116",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
    "requests>=2.31",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27,<0.29",
    "pytest>=8,<9",
]

[project.scripts]
jobpicky = "jobpicky.launcher:main"

[project.urls]
Homepage = "https://github.com/mushang0/JobPicky"
Repository = "https://github.com/mushang0/JobPicky"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jobpicky = [
    "resources/*.sqlite",
    "resources/*.json",
    "resources/defaults/*",
    "web/templates/**/*",
    "web/static/**/*",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
